...
        <TextView
            android:id="@+id/top_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_section_top" />
        <EditText
            android:id="@+id/top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:layout_below="@id/top_label" />
    </RelativeLayout>
...
