...
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp" >

        <com.google.devrel.samples.memedroid.app.image.ScalingImageView
            android:id="@+id/meme_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_action_camera_wide" />

        <Button
            android:id="@+id/meme_vote_button"
            android:layout_marginTop="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/meme_image"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_action_good" />
...
